--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
