--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
